--- a/style.css
+++ b/style.css
@@ -3,11 +3,7 @@
   margin: 0;
   box-sizing: border-box;
 }
-body {
-  position: relative;
-  height: 100vh;
-  margin: 0;
-}
+
 #the_only_button {
   border-color: blue;
   padding: 10px 20px;
@@ -16,24 +12,29 @@ body {
   font-style: normal;
   border-radius: 20px;
   background-color: white;
-  position: absolute;
-  top: 50px;
-  left: 50%;
-  transform: translateX(-50%);
+  display: block;
+  margin: 10px auto;
 }
 #the_only_button:hover {
   background-color: pink;
   color: blue;
 }
-.square {
+div {
   color: white;
   background-color: black;
   border: 1px solid gray;
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
+  float: left;
+  text-align: center;
+  line-height: 30px;
+  margin: 5px;
 }
 .circle {
-  border-radius: 25px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  float: left;
   color: black;
   background-color: white;
   border: 2px solid blue;
